fix spacing on student's education attributes

--- a/frontend/src/app/portfolio/education-section/education-section.component.less
+++ b/frontend/src/app/portfolio/education-section/education-section.component.less
@@ -5,3 +5,13 @@
   display: flex;
   justify-content: space-between;
 }
+
+.student-attribute {
+  .title {
+    font-weight: bold;
+  }
+
+  .value {
+    padding-left: .3em;
+  }
+}
